test/pointer/fail/ptr_cl06.v3
//@execute (false, false)=true; (false, true)=false; (true, false)=false; (true, true)=true
component ptr_cl06 {
	def main(x: bool, y: bool) -> bool {
		var p: Pointer, q = p.add(1);
		var f = if(x, p.add, q.add), g = if(y, p.add, q.add);
		return cmp(f, g);
	}
	def cmp(f: int -> Pointer, g: int -> Pointer) -> bool {
		return f == g;
	}
}
